Subiendo mejoras proyectos

--- a/proyectos.html
+++ b/proyectos.html
@@ -61,233 +61,99 @@
     </section>
 
     <!-- ========================== PROYECTOS ========================== -->
-    <main class="contenido">
-      <!-- Tarjeta 1 -->
-      <div class="tarjeta">
-        <img
-          src="img/inicio.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>🎨 Cultural Expression</em></strong>
-          </h5>
-          <p class="card-text">
-          Fomentando y preservando el arte, la cultura y el deporte en el municipio 📝📢💬🎭
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/MejorandoExpression" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
+    <main class="proyectos-container">
 
-        </div>
+  <h2 class="titulo-proyectos">Proyectos Destacados</h2>
+  <p class="subtitulo-proyectos">
+    Soluciones construidas con enfoque en backend, arquitectura y experiencia de usuario.
+  </p>
+
+  <div class="grid-proyectos">
+
+    <!-- Proyecto -->
+    <article class="proyecto-card">
+      <div class="proyecto-img">
+        <img src="img/inicio.jpg" alt="Cultural Expression" />
       </div>
 
-      <!-- Tarjeta 2 -->
-      <div class="tarjeta">
-        <img
-          src="img/img-garras.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>Garras</em></strong>
-          </h5>
-          <p class="card-text">
-            🌟 Tu tienda confiable para el bienestar de las mascotas y la felicidad de tus compañeros peludo
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/Garras-front-end" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio
-          </a>
-          <a href="https://genuine-paletas-50be2f.netlify.app/" class="btn-custom" target="_blank">Sitio Web</a>
+      <div class="proyecto-info">
+        <h3>🎨 Cultural Expression</h3>
 
+        <p>
+          Plataforma web para promover arte, cultura y deporte.
+          Incluye gestión de usuarios, publicaciones y categorías.
+        </p>
+
+        <div class="tech-stack">
+          <span>Django</span>
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>SQLite</span>
+        </div>
+
+        <div class="proyecto-links">
+          <a href="https://github.com/Sant-Beco/MejorandoExpression" target="_blank">GitHub</a>
         </div>
       </div>
+    </article>
 
-      <!-- Tarjeta 3 -->
-      <div class="tarjeta">
-        <img
-          src="img/img-portafolio.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>✨ Portafolio</em></strong>
-          </h5>
-          <p class="card-text">
-            Un espacio donde comparto y exhibo sus proyectos web, destacando sus habilidades y creatividad.
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/portafolio-san.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio
-          </a>
-          <a href="https://beautiful-madeleine-97cc02.netlify.app/" class="btn-custom" target="_blank">Sitio Web</a>
-        </div>
+    <!-- Garras -->
+    <article class="proyecto-card">
+      <div class="proyecto-img">
+        <img src="img/img-garras.jpg" alt="Garras" />
       </div>
 
-      <!-- Tarjeta 4 -->
-      <div class="tarjeta">
-        <img
-          src="img/img-project.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>Project and Task Django</em></strong>
-          </h5>
-          <p class="card-text">
-            Un proyecto desarrollado con Django, HTML y CSS ademas mejorar habilidades en desarrollo web.
-          </p>
+      <div class="proyecto-info">
+        <h3>🐾 Garras</h3>
+
+        <p>
+          E-commerce para productos de mascotas con diseño moderno
+          y estructura adaptable.
+        </p>
+
+        <div class="tech-stack">
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>Responsive</span>
         </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/projects-task-django.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
+
+        <div class="proyecto-links">
+          <a href="https://github.com/Sant-Beco/Garras-front-end" target="_blank">GitHub</a>
+          <a href="https://genuine-paletas-50be2f.netlify.app/" target="_blank">Live</a>
         </div>
+      </div>
+    </article>
+
+    <!-- FastAPI -->
+    <article class="proyecto-card">
+      <div class="proyecto-img">
+        <img src="img/img-fastapi.jpg" alt="FastAPI CRUD" />
       </div>
 
-       <!-- Tarjeta 5 -->
-       <div class="tarjeta">
-        <img
-          src="img/img-micro.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>Microestación Meteorologica</em></strong>
-          </h5>
-          <p class="card-text">
-            Un sistema de monitoreo climático diseñado para caficultores y pequeñas fincas 🌿☕.
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/SitioWebEstacionMeteorologica.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
-        </div>
-      </div>
+      <div class="proyecto-info">
+        <h3>🚀 FastAPI Customer CRUD</h3>
 
-      <!-- Tarjeta 6 -->
-      <div class="tarjeta">
-        <img
-          src="img/img-py.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>Python 🐍</em></strong>
-          </h5>
-          <p class="card-text">
-            Repositorio con ejercicios para aprender y practicar Python desde cero. Ideal para reforzar conceptos básicos.
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/Ejercicios-python-san.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
-        </div>
-      </div>
+        <p>
+          API RESTful para gestión de clientes con validaciones
+          y conexión a base de datos MySQL.
+        </p>
 
-      <!-- Tarjeta 7 -->
-      <div class="tarjeta">
-        <img
-          src="img/img-claves.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>🔐 Generador de Contraseñas Seguras</em></strong>
-          </h5>
-          <p class="card-text">
-            🔸Ideal para proteger tus cuentas con combinaciones de letras, números y símbolos.
-          </p>
+        <div class="tech-stack">
+          <span>FastAPI</span>
+          <span>SQLAlchemy</span>
+          <span>MySQL</span>
+          <span>Pydantic</span>
         </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/CreatePassword.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
-        </div>
-      </div>
 
-      <!-- Tarjeta 8 -->
-      <div class="tarjeta">
-        <img
-          src="img/img-fastapi.jpg  "
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>🚀 FastAPI Customer CRUD API</em></strong>
-          </h5>
-          <p class="card-text">
-            ✅ Crea, consulta, actualiza y elimina clientes
-            🛠️ Conectado a MySQL mediante SQLAlchemy
-            🧰 Validado con Pydantic
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="https://github.com/Sant-Beco/fastapi-customer-crud.git" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
+        <div class="proyecto-links">
+          <a href="https://github.com/Sant-Beco/fastapi-customer-crud.git" target="_blank">GitHub</a>
         </div>
       </div>
+    </article>
 
-      <!-- Tarjeta 9 -->
-      <div class="tarjeta">
-        <img
-          src="img/img-scanner.jpg"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>Futuro: Scanner </em></strong>
-          </h5>
-          <p class="card-text">
-              En proximos dias se publicara.
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="/" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
-        </div>
-      </div>
+  </div>
+</main>
 
-      <!-- Tarjeta 10 -->
-      <div class="tarjeta">
-        <img
-          src="img/cierre_mes.png"
-          class="card-img-top"
-          alt="imagen de proyecto"
-        />
-        <div class="card-body">
-          <h5 class="card-title text-center">
-            <strong><em>Excel Cierre de mes </em></strong>
-          </h5>
-          <p class="card-text">
-              Excel funcional para hacer cierre de mes.
-          </p>
-        </div>
-        <div class="card-body info-especifica">
-          <a href="/" class="btn-custom" target="_blank" rel="noopener noreferrer" aria-label="Abrir el repositorio en GitHub en una nueva pestaña">
-            🔗 Ver repositorio en GitHub
-          </a>
-        </div>
-      </div>
-    </main>
 
       
 
