Subiendo mejoras de mode black y white

--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
       <div class="tool-icon">⚡</div>
       <div class="tool-icon">🛠️</div>
     </div>
-
     <div class="hero-cta">
       <a href="#proyectos" class="btn btn-primary">Ver Proyectos</a>
-      <a href="#cv-download" class="btn btn-secondary">Descargar CV</a>
+      <a href="Hoja_de_vida.pdf" class="btn btn-secondary" download="Hoja_de_vida.pdf">Descargar CV</a>
     </div>
   </div>
 
