Subiendo hoja de vida cv, que se pueda descargar

--- a/index.html
+++ b/index.html
@@ -361,10 +361,8 @@
         <div class="cv-card">
           <div class="cv-icon">📄</div>
           <h3>Descarga mi CV completo</h3>
-          <p>Conoce más sobre mi experiencia, formación y habilidades</p>
-          <a href="#" class="btn btn-download" id="download-cv">
-            Descargar CV (PDF)
-          </a>
+          <p>Conoce más sobre mi experiencia, formación y habilidades</p> 
+          <a href="Hoja_de_vida.pdf" class="btn btn-secondary" download="Hoja_de_vida.pdf">Descargar CV (PDF)</a>
           <small class="cv-note">Actualizado en Febrero 2026</small>
         </div>
       </div>
