--- a/index.html
+++ b/index.html
@@ -310,6 +310,28 @@
           </div>
         </div>
       </article>
+
+      <!-- Misionales -->
+      <article class="proyecto-card">
+        <div class="proyecto-badge">Python</div>
+        <div class="proyecto-img">
+          <img src="img/misionales.png" alt="FastAPI CRUD" onerror="this.src='https://via.placeholder.com/400x250/00adb5/ffffff?text=FastAPI+CRUD'"/>
+          <div class="proyecto-overlay">
+            <a href="#" target="_blank" class="btn-proyecto">Ver en GitHub</a>
+          </div>
+        </div>
+        <div class="proyecto-info">
+          <h3>🚀 Inspeccion de vehiculos</h3>
+          <p>El preoperacinal se diligencia para comprobar funcionamiento de vehiculo.A.</p>
+          <div class="proyecto-tech">
+            <span>WeasyPrint</span>
+            <span>FastAPI</span>
+            <span>MySQL</span>
+            <span>Python</span>
+            <span>Pillow</span>
+          </div>
+        </div>
+      </article>
     </div>
   </div>
 </section>
